--- a/static-serving/nginx.conf
+++ b/static-serving/nginx.conf
@@ -11,9 +11,8 @@ server {
   gzip_proxied any;
 
   location = /favicon.ico {
-    alias /var/www/nginx/html/public/images/favicon.ico;
     access_log off;
-    # empty_gif;
+    empty_gif;
   }
 
   location = /robots.txt {
@@ -39,6 +38,8 @@ server {
     proxy_redirect off;
   }
 
+  # An extremely basic API-like endpoint that returns a
+  # JSON block with the client's IP address.
   location = /my-ip {
     add_header Content-Type application/json;
     return 200 "{ \"ip\": \"$remote_addr\", \"timestamp\": \"$time_local\" }\r\n";
