--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   reverse_proxy:
     image: nginx:alpine
+    container_name: reverse_proxy
     ports:
       - "8080:8080"
     volumes:
@@ -9,6 +10,7 @@ services:
       - ./reverse-proxy/basic_auth:/etc/nginx/basic_auth:ro
   static_serving:
     image: nginx:alpine
+    container_name: static_serving
     ports:
       - "8081:8080"
     volumes:
@@ -16,6 +18,7 @@ services:
       - ./app-server/public:/var/www/nginx/html/public:ro
   full_cache:
     image: nginx:alpine
+    container_name: full_cache
     ports:
       - "8082:8080"
     volumes:
@@ -24,8 +27,17 @@ services:
       - ./full-cache/cache:/var/tmp
   error_handling:
     image: nginx:alpine
+    container_name: error_handling
     ports:
       - "8083:8080"
     volumes:
       - ./error-handling/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./error-handling/basic_auth:/etc/nginx/basic_auth:ro
+  js_module:
+    image: nginx:alpine
+    container_name: js_module
+    ports:
+      - "8084:8080"
+    volumes:
+      - ./js-module/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./js-module/scripts:/etc/nginx/scripts:ro
