--- a/full-cache/nginx.conf
+++ b/full-cache/nginx.conf
@@ -20,15 +20,9 @@ server {
   proxy_ignore_headers Expires;
 
   location = /favicon.ico {
-    alias /var/www/nginx/html/public/images/favicon.ico;
     access_log off;
     proxy_no_cache 1;
-    # empty_gif;
-  }
-
-  location /public {
-    root /var/www/nginx/html;
-    proxy_no_cache 1;
+    empty_gif;
   }
 
   location / {
