--- a/app-server/package.json
+++ b/app-server/package.json
@@ -14,5 +14,8 @@
     "fastify": "^3.6.0",
     "fastify-static": "^3.2.1",
     "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "pino-pretty": "^7.6.1"
   }
 }
