--- a/full-cache/nginx.conf
+++ b/full-cache/nginx.conf
@@ -32,6 +32,21 @@ server {
     proxy_pass http://host.docker.internal:3000/;
     proxy_set_header Host $http_host;
     proxy_redirect off;
+   
   }
+
+  #
+  # Can we do better here to avoid all this duplication?
+  #
+  location /public {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Nginx-Proxy true;
+    proxy_pass http://host.docker.internal:3000/public;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    proxy_cache_valid 200 60m;
+  }
+
 
 }
