moved the node app into a container and added a new cache on error use case

--- a/cache-on-error/nginx.conf
+++ b/cache-on-error/nginx.conf
@@ -1,5 +1,5 @@
 
-proxy_cache_path /var/tmp/cache max_size=20m keys_zone=appcache:10m;
+proxy_cache_path /var/tmp/cache max_size=20m keys_zone=appcache:10m inactive=1d;
 
 server {
   listen 8080;
@@ -14,8 +14,9 @@ server {
 
   proxy_cache appcache;
   proxy_cache_methods GET;
-  proxy_cache_valid 200 1m;
-  proxy_cache_valid 404 10m;
+  # proxy_cache_valid 200 10m;
+  # proxy_cache_valid 404 60m;
+
   proxy_ignore_headers Cache-Control;
   proxy_ignore_headers Expires;
 
@@ -29,23 +30,12 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Nginx-Proxy true;
+    proxy_cache_key $scheme://$host$uri$is_args$query_string;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504 http_429;
+    proxy_connect_timeout 3s;
     proxy_pass http://node_app_server:3000/;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-   
-  }
-
-  #
-  # Can we do better here to avoid all this duplication?
-  #
-  location /public {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Nginx-Proxy true;
-    proxy_pass http://node_app_server:3000/public;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-    proxy_cache_valid 200 60m;
   }
 
 
