--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: "3"
 services:
+  node_app_server:
+    build: ./app-server/Dockerfile
+    container_name: node_app_server
+    ports:
+      - "3000:3000"
+      - "3001:3001"
+      - "3002:3002"
   reverse_proxy:
     image: nginx:alpine
     container_name: reverse_proxy
@@ -49,3 +56,11 @@ services:
     volumes:
       - ./split-clients/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./split-clients/scripts:/etc/nginx/scripts:ro
+  cache_on_error:
+    image: nginx:alpine
+    container_name: cache_on_error
+    ports:
+      - "8086:8080"
+    volumes:
+      - ./cache-on-error/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./cache-on-error/cache:/var/tmp/cache
