--- a/js-module/nginx.conf
+++ b/js-module/nginx.conf
@@ -58,7 +58,7 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Nginx-Proxy true;
-      proxy_pass http://host.docker.internal:3000;
+      proxy_pass http://node_app_server:3000;
       proxy_set_header Host $http_host;
       proxy_cache_bypass $http_upgrade;
       proxy_redirect off;
