--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -45,7 +45,7 @@ server {
 }
 
 upstream nodeapp {
-  server host.docker.internal:3000;
-  server host.docker.internal:3001;
-  server host.docker.internal:3002;
+  server node_app_server:3000;
+  server node_app_server:3001;
+  server node_app_server:3002;
 }
