--- a/split-clients/nginx.conf
+++ b/split-clients/nginx.conf
@@ -75,15 +75,15 @@ http {
   }
 
   upstream nodeapp0 {
-    server host.docker.internal:3000;
+    server node_app_server:3000;
   }
 
   upstream nodeapp1 {
-    server host.docker.internal:3001;
+    server node_app_server:3001;
   }
 
   upstream nodeapp2 {
-    server host.docker.internal:3002;
+    server node_app_server:3002;
   }
 
 }
