--- a/cache-on-error/nginx.conf
+++ b/cache-on-error/nginx.conf
@@ -14,8 +14,8 @@ server {
 
   proxy_cache appcache;
   proxy_cache_methods GET;
-  # proxy_cache_valid 200 10m;
-  # proxy_cache_valid 404 60m;
+  proxy_cache_valid 1s;
+  proxy_cache_valid 404 1m;
 
   proxy_ignore_headers Cache-Control;
   proxy_ignore_headers Expires;
@@ -34,7 +34,7 @@ server {
     proxy_set_header Host $http_host;
     proxy_redirect off;
     proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504 http_429;
-    proxy_connect_timeout 3s;
+    proxy_connect_timeout 2s;
     proxy_pass http://node_app_server:3000/;
   }
 
